# simple_shell

./: AUTHORS  CMakeLists.txt  README.md  aux_str.c  cmd_exec.c  hsh  man_1_simple_shell
